--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -7,17 +7,27 @@ AllCops:
 Metrics/AbcSize:
   Enabled: true
   Exclude:
-    - 'lib/models/console_app.rb'
+    - 'lib/config/console_app.rb'
 
 Metrics/MethodLength:
   Enabled: true
   Exclude:
-    - 'lib/models/console_app.rb'
+    - 'lib/config/console_app.rb'
 
 Style/FormatStringToken:
   Enabled: false
+
+Style/FormatString:
+  Enabled: true
+  Exclude:
+    - 'lib/mvc/base/message_view.rb'
 
 Style/StringLiterals:
   Enabled: true
   Exclude:
     - 'lib/views/**/*_message_view.rb'
+
+Style/YodaCondition:
+  Enabled: true
+  Exclude:
+    - 'lib/mvc/base/message_view.rb'
