Better miso-isms
At least for the routes currently set up.

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -27,6 +27,16 @@ Style/StringLiterals:
   Exclude:
     - 'lib/views/**/*_message_view.rb'
 
+Layout/IndentArray:
+  Enabled: true
+  Exclude:
+    - 'lib/views/**/*_message_view.rb'
+
+Metrics/MethodLength:
+  Enabled: true
+  Exclude:
+    - 'lib/views/**/*_message_view.rb'
+
 Style/YodaCondition:
   Enabled: true
   Exclude:
