Update README + git tagz

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,15 @@
 /doc/
 /lib/
-/bin/
 /.shards/
+
+
+bin/miso
 
 # Libraries don't need dependency lock
 # Dependencies will be locked in application that uses them
 /shard.lock
 
 .swp
+.swo
 .DS_Store
 tags
